--- a/Student_bio.html
+++ b/Student_bio.html
@@ -6,15 +6,12 @@
 
 
 <body>
-	<h1>Student Bio </h1>
-	<h3>Jean-Philip Lamarre </h3>
-
-	<img src="https://scontent.fphx1-1.fna.fbcdn.net/v/t1.0-1/p320x320/11043063_771755562901227_5504069483115123556_n.jpg?oh=5b5def06fae657f1847a8932eb3dfe20&oe=5A7F2466"> 
-	<br>
-
-	<a href="https://www.facebook.com/jeanphilip.lamarre">Check Out My facebook</a>
-
-	<p>This is a paragraph.</p>
+	
+	<div class="background-container">
+	<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+	<div class="stars"></div>
+	<div class="twinkling"></div>
+	<div class="clouds"></div>
 
 </body>
 </html>
