html closing tag wasn't in the right place

--- a/Student_bio.html
+++ b/Student_bio.html
@@ -1,19 +1,24 @@
+<!-- MyFirstHTML.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 <head>
-	<title>My Student Bio</title>
+  <meta charset="UTF-8">
+  <title>My First Page</title>
 </head>
 
-
 <body>
-	
-	<div class="background-container">
-	<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
-	<div class="stars"></div>
-	<div class="twinkling"></div>
-	<div class="clouds"></div>
-
+		<div class="background-container">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+				<div class="stars"></div>
+				<div class="twinkling"></div>
+				<div class="clouds"></div>
 </body>
+
 </html>
+
+
+
+
+
