--- a/Student_bio.html
+++ b/Student_bio.html
@@ -1,24 +1,27 @@
 <!-- MyFirstHTML.html -->
 <!DOCTYPE html>
 <html lang="en-us">
-		<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+ crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+ crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+ crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+ crossorigin="anonymous"></script>
 
 <head>
-  <meta charset="UTF-8">
-  <title>My First Page</title>
+	<meta charset="UTF-8">
+	<title>My First Page</title>
 </head>
 
 <body>
-		<div class="background-container">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
-				<div class="stars"></div>
-				<div class="twinkling"></div>
-				<div class="clouds"></div>
+	<div class="background-container">
+		<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+		<div class="stars"></div>
+		<div class="twinkling"></div>
+		<div class="clouds"></div>
 </body>
 
 </html>
-
-
-
-
-
