Jumbo tron added

--- a/Student_bio.html
+++ b/Student_bio.html
@@ -22,6 +22,14 @@
 		<div class="stars"></div>
 		<div class="twinkling"></div>
 		<div class="clouds"></div>
+		<!-- Adding Jumbotron -->
+		<div class="jumbotron jumbotron-fluid">
+			<div class="container">
+				<h1 class="display-3">Fluid jumbotron</h1>
+				<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+			</div>
+		</div>
+
 </body>
 
 </html>
