tring to style jumbotron but it seems useless

--- a/Student_bio.html
+++ b/Student_bio.html
@@ -1,7 +1,7 @@
 <!-- MyFirstHTML.html -->
 <!DOCTYPE html>
 <html lang="en-us">
-<link rel="stylesheet" type="text/css" href="style.css">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
  crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
@@ -10,10 +10,12 @@
  crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
  crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="css/components.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 <head>
 	<meta charset="UTF-8">
-	<title>My First Page</title>
+	<title>Bio-ClassyDev</title>
 </head>
 
 <body>
@@ -23,7 +25,7 @@
 		<div class="twinkling"></div>
 		<div class="clouds"></div>
 		<!-- Adding Jumbotron -->
-		<div class="jumbotron jumbotron-fluid">
+		<div id="jumbo" class="jumbotron jumbotron-fluid">
 			<div class="container">
 				<h1 class="display-3">Fluid jumbotron</h1>
 				<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
