update to student bio mild push

--- a/Student_bio.html
+++ b/Student_bio.html
@@ -25,7 +25,7 @@
 		<div class="twinkling"></div>
 		<div class="clouds"></div>
 		<!-- Adding Jumbotron -->
-		<div id="jumbo" class="jumbotron jumbotron-fluid">
+		<div id="jumbo" class="jumbotron jumbotron-fluid"  style="z-index: 5">
 			<div class="container">
 				<h1 class="display-3">Fluid jumbotron</h1>
 				<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
